crates/swc_ecma_parser/tests/typescript-errors/issue-1209/input.ts.stderr
error: Type annotations must come before default assignments
 --> $DIR/tests/typescript-errors/issue-1209/input.ts:1:14
  |
1 | function foo(foo = bar: number) {
  |              ^^^^^^^^^^^^^^^^^

