crates/swc_ecma_parser/tests/typescript-errors/issue-1209/input.ts
function foo(foo = bar: number) {
  /* */
}
